# wvu-ieng-331-m2-1

./: .gitignore  DESIGN.md  GRADE.md  README.md  pyproject.toml
sql/: abc_classification.sql  seller_scorecard.sql
src/wvu_ieng_331_m2_1/: __init__.py  pipeline.py  queries.py  validation.py
