[project]
name = "wvu-ieng-331-m2-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kali Munro", email = "km00151@mix.wvu.edu" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
wvu-ieng-331-m2-1 = "wvu_ieng_331_m2_1:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
